@@ -16,10 +16,8 @@ pipeline{
                 scannerHome = tool 'SONAR_SCANNER'
             }
             steps{
-                withEnv(['JAVA_OPTS=--add-opens java.base/java.lang=ALL-UNNAMED']) {
-                    withSonarQubeEnv('SONAR_LOCAL'){
-                        bat "\"${scannerHome}/bin/sonar-scanner\" -X -Dsonar.projectKey=DeployBack -Dsonar.host.url=http://localhost:9000 -Dsonar.login=7645d59a1901eef2e0643bfa61f10d6f8537d79d -Dsonar.java.binaries=target"
-                    }
+                withSonarQubeEnv('SONAR_LOCAL'){
+                    bat "\"${scannerHome}/bin/sonar-scanner\" -X -Dsonar.projectKey=DeployBack -Dsonar.host.url=http://localhost:9000 -Dsonar.login=7645d59a1901eef2e0643bfa61f10d6f8537d79d -Dsonar.java.binaries=target"
                 }
             }
         }
